--- a/Christian_Oliveira_LISTA_01/src/questao01/css/stylesheet.css
+++ b/Christian_Oliveira_LISTA_01/src/questao01/css/stylesheet.css
@@ -10,34 +10,28 @@ h1 {
     text-align: center;
     font-family: Consolas;
     font-style: solid;
-    height: 100%;
-    width: 99%;
-    animation: changeColor 5s infinite;
+    animation: changeColor 2s infinite;
+}
+h3 {
+    text-align: center;
+    font-family: Consolas;
+    font-style: solid;
 }
 
 #video {
-    display:block;
+    display: block;
     margin: 0 auto;
 }
 
 @keyframes changeColor {
     0% {
-        color: black;
+        color: rgba(0, 0, 0, 1);
     }
 
-    25% {
-        color: rgba(0, 0, 0, 0.75);
+    33% {
+        color: rgba(0, 0, 0, 0);
     }
-
-    50% {
-        color: rgba(0, 0, 0, 0.5);
-    }
-
-    75% {
-        color: rgba(0, 0, 0, 0.75);
-    }
-
-    100% {
-        color: black;
+    66% {
+        color: rgba(0, 0, 0, 1);
     }
 }
